# clock

./: .gitignore  Cargo.toml  Trunk.toml  index.html
src/: clock.rs  fetch.rs  main.rs  titlebar.rs  zoom.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilites/: main.json
src-tauri/src/: lib.rs  main.rs
styles/: main.css
