[package]
name = "clock-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
yew_icons = {version = "0.8", features = ["LucideMinimize2", "LucideMaximize2", "FontAwesomeSolidWindowMinimize", "FontAwesomeSolidSkullCrossbones"]}
implicit-clone = "0.4.9"
yew-hooks = "0.3"
gloo-timers = "0.2.1"
chrono = "0.4"

[workspace]
members = ["src-tauri"]
